--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
+    "connect-mongodb-session": "^2.3.1",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-edge": "^2.0.2",
     "express-session": "^1.17.0",
     "mongoose": "^5.9.6",
-    "socket.io": "^2.3.0"
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "socket.io": "^2.3.0",
+    "validator": "^13.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
