--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "mongo-start": "sudo systemctl start mongod",
     "mongo-stop": "sudo systemctl stop mongod"
